# rust-learn-japanese

./: Cargo.toml  README.md  README_ch.md  dict.json  test.json
html2json/: Cargo.toml  test.html
html2json/src/: main.rs
src/: main.rs
src/command/: cargo.rs  cd.rs  clear.rs  cp.rs  exa.rs  git.rs  j.rs  just.rs  ls.rs  mod.rs  mv.rs  other.rs  rm.rs  ssh.rs  touch.rs  vim.rs
src/database/: html2json.rs  mod.rs
