[package]
name = "rust-learn-japanese"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"
description = "Rustで作る日本語勉強ためのコマンドラインツールである"
readme = "README.md"
license-file = "LICENSE"
keywords = ["command-line", "japanese"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
